# Yanv

./: README.md  pyproject.toml
test/cache/: test_memorycache.py
yanv/: __main__.py  application_details.py  launch_parameters.py  run.py  server.py
yanv/backend/: base.py  file.py
yanv/cache/: __init__.py  base.py  memory.py
yanv/handlers/: __init__.py  http.py  navigate.py  resources.py  socket.py  state.py  websocket.py
yanv/messages/: base.py
yanv/messages/requests/: __init__.py  base.py  data.py
yanv/messages/responses/: __init__.py  base.py  data.py  error.py
yanv/model/: dataset.py  dimension.py  variable.py
yanv/static/scripts/: client.js  elements.js  model.js  requests.js  responses.js  utility.js  value.js  yanv.js
yanv/static/scripts/views/: metadata.js
yanv/static/style/: yanv.css
yanv/static/templates/: index.html  variable_summary.html
yanv/utilities/: __init__.py  base.py  collections.py  common.py  constants.py  filter.py  mimetypes.py  mixins.py  netcdf.py
yanv/utilities/plotting/: plot.py
